--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,6 @@
+name: I'm a Truck
+description: Landing page for I'm a Truck Apps
+show_downloads: false
+google_analytics:
 theme: jekyll-theme-cayman
+
